--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,19 +10,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Build docs
-      run: |
-        ls -la
-        chmod +x ./build-docs.sh
-        sh ./build-docs.sh
+      run: sh ./build-docs.sh
 
-#     - name: Upload Release Notes to Wiki
-#       uses: docker://decathlon/wiki-page-creator-action:latest
-#       env:
-#         ACTION_MAIL: info@chainsafe.io
-#         ACTION_NAME: gregthegreek
-#         GH_PAT: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-#         MD_FOLDER: docs
-#         OWNER: ChainSafe
-#         REPO_NAME: engineering-wiki
-#         SKIP_MD: README.md
-#         TRANSLATE_UNDERSCORE_TO_SPACE: true
+    - name: Publish docs
+      run: sh ./publish-docs.sh
