--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,7 @@
-* @morrigan @mpetrunic @kalambet
+* @morrigan @mpetrunic @kalambet @q9f
 
 /docs/2_development/2_tech-stack/go.md @qdm12
 
-/docs/2_development/2_tech-stack/rust.md @ivanceras @q9f
+/docs/2_development/2_tech-stack/Typescript/readme.md @dapplion @jdevcs @nazarhussain @wemeetagain @beroburny
+
+/docs/2_development/2_tech-stack/rust.md @ivanceras
