--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -22,7 +22,7 @@ jobs:
     - run: yarn spellcheck
     - name: Check for uppercase section links
       run: |
-        found="$(grep -rE '\(#.*[A-Z].*\)?' ./docs)"
+        found="$(grep -rE '\(#.*[A-Z].*\)?' ./docs || echo '')"
         if [ "$found" = "" ]; then
           exit 0
         fi
