Enforce lowercase section links (#71)
* Add CI step to check for uppercase section links

* Fix new CI step

* Fix CI to pass on success

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -20,4 +20,12 @@ jobs:
     - run: yarn install --frozen-lockfile
     - run: yarn typecheck
     - run: yarn spellcheck
+    - name: Check for uppercase section links
+      run: |
+        found="$(grep -rE '\(#.*[A-Z].*\)?' ./docs || echo '')"
+        if [ "$found" = "" ]; then
+          exit 0
+        fi
+        echo -e "Found problematic uppercase section links:\n$found"
+        exit 1
     - run: yarn build
