--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
-    "spellcheck": "spellchecker -f \"./docs/**/*.md\" -l en-US -q  -d ./dictionary.txt"
+    "spellcheck": "spellchecker -f \"./docs/**/*.md\" \"./*.md\" \"./src/**/*.md\" -l en-US -q  -d ./dictionary.txt"
   },
   "dependencies": {
     "@cmfcmf/docusaurus-search-local": "^0.10.0",
