--- a/package.json
+++ b/package.json
@@ -16,21 +16,19 @@
     "spellcheck": "spellchecker -f \"./docs/**/*.md\" -l en-US -q  -d ./dictionary.txt"
   },
   "dependencies": {
-    "@cmfcmf/docusaurus-search-local": "^0.10.0",
-    "@docusaurus/core": "2.0.0-beta.18",
-    "@docusaurus/preset-classic": "2.0.0-beta.18",
-    "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.1.1",
-    "mdx-mermaid": "^1.2.2",
-    "mermaid": "^9.0.0",
-    "prism-react-renderer": "^1.3.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@cmfcmf/docusaurus-search-local": "^0.11.0",
+    "@docusaurus/core": "^2.2.0",
+    "@docusaurus/preset-classic": "^2.2.0",
+    "mdx-mermaid": "^1.3.2",
+    "mermaid": "^9.3.0",
+    "prism-react-renderer": "^1.3.5",
+    "react": "^17",
+    "react-dom": "^17"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.0-beta.18",
-    "@tsconfig/docusaurus": "^1.0.5",
-    "spellchecker-cli": "^4.8.1",
+    "@docusaurus/module-type-aliases": "^2.2.0",
+    "@tsconfig/docusaurus": "^1.0.6",
+    "spellchecker-cli": "^6.1.0",
     "typescript": "^4.6.3"
   },
   "browserslist": {
