--- a/.github/workflows/cf-deploy.yaml
+++ b/.github/workflows/cf-deploy.yaml
@@ -1,9 +1,15 @@
 name: CloudFlare Deploy
-on: [push]
+on:
+  workflow_run:
+    workflows:
+      - CI
+    types:
+      - completed
 
 jobs:
   deploy:
       runs-on: ubuntu-latest
+      if: ${{ github.event.workflow_run.conclusion == 'success' }}
       permissions:
         contents: read
         deployments: write
