--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -31,6 +31,7 @@ jobs:
     - run: yarn build
     - name: Publish to Cloudflare Pages
       uses: cloudflare/pages-action@1
+      if: '! github.event.pull_request.draft'
       with:
         apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
         accountId: 2238a825c5aca59233eab1f221f7aefb
