chore: add pr permissions

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -7,6 +7,10 @@ on:
     branches:
       - '**'
 
+permissions:
+      contents: read
+      deployments: write
+
 jobs:
   check:
     name: Check
