chore: deploy post build (#93)
* chore: deploy post build

* Update .github/workflows/check.yaml

Co-authored-by: Peter Kalambet <peter@kalambet.dev>

* chore: add pr permissions

---------

Co-authored-by: Peter Kalambet <peter@kalambet.dev>

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -7,6 +7,10 @@ on:
     branches:
       - '**'
 
+permissions:
+      contents: read
+      deployments: write
+
 jobs:
   check:
     name: Check
@@ -29,3 +33,12 @@ jobs:
         echo -e "Found problematic uppercase section links:\n$found"
         exit 1
     - run: yarn build
+    - name: Publish to Cloudflare Pages
+      uses: cloudflare/pages-action@1
+      if: '! github.event.pull_request.draft'
+      with:
+        apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+        accountId: 2238a825c5aca59233eab1f221f7aefb
+        projectName: engineering-handbook
+        directory: ./build
+        gitHubToken: ${{ secrets.GITHUB_TOKEN }}
