--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -1,15 +1,12 @@
 name: CI
 on: 
   push:
-    branches:
-      - main
   pull_request:
-    branches:
-      - '**'
 
 permissions:
-      contents: read
-      deployments: write
+  contents: read
+  deployments: write
+  pull-requests: write
 
 jobs:
   check:
