--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -1,7 +1,11 @@
 name: CI
 on: 
   push:
+    branches:
+      - main
   pull_request:
+    branches:
+      - '**'
 
 permissions:
   contents: read
