--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -43,4 +43,4 @@ jobs:
         projectName: engineering-handbook
         directory: ./build
         gitHubToken: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.ref_name }}
+        branch: ${{ github.head_ref || github.ref_name }}
