docs: documentation deployment (#94)
* docs: update documentation deployment step

* fix: spellcheck

* fix: apply PR review comments

* docs: update workflow file

* chore: add pull request write permissions and push event

* reduce amount of pull_request runs

* docs: update cloudflare workflow

* fix: bug in cloudflare github action

* debug

* docs: fix ci example

* fix: cloudflare action bug

* fix: regex uzppercase link checker

* chore: remove mannually passed branch name

* docs: update pages action

* chore: run build only on push to main

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -2,14 +2,15 @@ name: CI
 on: 
   push:
     branches:
-      - main
+      - 'main'
   pull_request:
     branches:
       - '**'
 
 permissions:
-      contents: read
-      deployments: write
+  contents: read
+  deployments: write
+  pull-requests: write
 
 jobs:
   check:
@@ -26,7 +27,7 @@ jobs:
     - run: yarn spellcheck
     - name: Check for uppercase section links
       run: |
-        found="$(grep -rE '\(#.*[A-Z].*\)?' ./docs || echo '')"
+        found="$(grep -rE '\(#[^\)]*?[A-Z].*?\)?' ./docs || echo '')"
         if [ "$found" = "" ]; then
           exit 0
         fi
@@ -34,7 +35,7 @@ jobs:
         exit 1
     - run: yarn build
     - name: Publish to Cloudflare Pages
-      uses: cloudflare/pages-action@1
+      uses: cloudflare/pages-action@v1
       if: '! github.event.pull_request.draft'
       with:
         apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
