--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "engineering-handbook",
   "version": "0.0.0",
   "private": true,
+  "packageManager": "yarn@1.22.19",
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
@@ -19,6 +20,8 @@
     "@cmfcmf/docusaurus-search-local": "^0.11.0",
     "@docusaurus/core": "^2.3.1",
     "@docusaurus/preset-classic": "^2.3.1",
+    "highcharts": "^11.4.0",
+    "highcharts-react-official": "^3.2.1",
     "mdx-mermaid": "^1.3.2",
     "mermaid": "^9.3.0",
     "prism-react-renderer": "^1.3.5",
