--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,4 @@
-* @morrigan @mpetrunic @kalambet @q9f
+* @morrigan @mpetrunic @kalambet @AlexeyKrasnoperov @joshdougall
 
-/docs/2_development/2_tech-stack/go.md @qdm12
+/docs/2_development/2_tech-stack/Typescript/readme.md @wemeetagain @beroburny
 
-/docs/2_development/2_tech-stack/Typescript/readme.md @dapplion @jdevcs @nazarhussain @wemeetagain @beroburny
-
-/docs/2_development/2_tech-stack/rust.md @ivanceras
